Version 1.5.2 - xx xxx 2010
  
  * Fix Ruby GC crash for Ruby 1.8.7 and later. Ticket #158.

Version 1.5.1 - 12 May 2010

  * Add librets-config-win for Windows. Ticket #138.
  * Properly parse failed login RETS Reply. Ticket #139.
  * User Agent Authentication fails for non-Interealty servers.
    Ticket #140.
  * UpdateResponse.Parse() throws execption. Ticket #155.
  * Add InKeyIndex() to MetadataTable and expose to SWIG.
    Ticket #157.

Version 1.5.0b1 - 22 Mar 2010

  * Support 64 bit Windows. Ticket #125.
    Note that library names for native development have changed
    on Windows. The archive library now follows the convention:
    liblibrets-<vsversion>-<flags>-<version>.lib where:
        <vsversion> is the compiler version;
        <flags> is "s" to indicate statically linked and
                "d" indicates that the library has debug code;
        <version> is the libRETS version number.
    For example:
        liblibrets-vs2008-sd-1.5.0b1.lib
        liblibrets-vs2008-1.5.0b1.lib

Version 1.4.1 - 12 Mar 2010

  * Add --enable-universal to configure. Ticket #44.
  * Add PHP to VS2008 build libraries. Ticket #94.
  * Add PERL to VS2008 build libraries. Ticket #95.
  * Add "make uninstall" feature. Ticket #121.
  * Configure is using --L with ANTLR lib. Ticket #122.
  * Add configurable RestrictedIndicator with example
    Search program. Ticket #123.
  * Move GetObjectRequest::GetIgnoreMalformedHeaders
    documentation to Maintainer mode. Ticket #126.
  * Add IgnoreMalformedHeaders processing to trailing
    boundary handling as well. Ticket #127.
  * Refresh VendorSrc. Ticket #128.
  * Correct Test100Continue network test failure. 
    Ticket #129.
  * SWIG 1.3.40 doesn't build PHP bindings. Ticket #132.
  * SQL2DMQL compiler changed behaviour of GetObject queries to
    allow for multiple ids per query by removing object_id. (In
    implementation if one wants to specify an object_id, they should