@@ -1,6 +1,6 @@
 COPYRIGHT AND PERMISSION NOTICE
 
-Copyright (C) 2005-2007 National Association of REALTORS(R)
+Copyright (C) 2005-2010 National Association of REALTORS(R)
 
 All rights reserved.
 
